Update CV and index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>Liz Falconer, Portfolio</h1>
-    <a href="/cv">View my CV</a>
+    <a href="/CV">View my CV</a>
     <!-- Example JS link -->
     <script src="app.js"></script>
   </body>
