--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Example CSS link -->
-    <link rel="stylesheet" href="styles.css">
-    <title>Hello, world!</title>
+    <title>Liz Falconer, Portfolio</title>
   </head>
   <body>
-    <h1>Liz Falconer, Portfolio</h1>
-    <a href="/CV">View my CV</a>
-    <!-- Example JS link -->
-    <script src="app.js"></script>
+      <header>
+        <div>
+        <img src="Liz Logo.png" alt="Liz Falconer Logo" />
+      </div>
+      <nav>
+          <ul>
+              <li><a href="/CV">CV</a></li>
+          </ul>
+      </nav>
+      </header>
   </body>
 </html>
