--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <nav>
           <ul>
               <li><a href="/CV">CV</a></li>
+              <li><a href="http://www.eatdirtyburger.com/whitechapel">Burgers</a>
+              <li><a href="https://www.instagram.com/rizuchanmungbean/">Instagram</a>
           </ul>
       </nav>
       </header>
