--- a/CV/index.html
+++ b/CV/index.html
@@ -5,13 +5,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
+  <style>
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+</style>
+  <link href="https://fonts.googleapis.com/css?family=Charmonman" rel="stylesheet">
   <!-- CSS link -->
       <title>Liz Falconer - CV</title>
       <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="bg"></div>
     <header>
         <div class="container">
           <div>
@@ -29,6 +32,9 @@
     </header>
     <main class="container">
         <section>
+          <div class="pic">
+            <img src="https://img-aws.ehowcdn.com/240x360p/s3-us-west-1.amazonaws.com/contentlab.studiod/getty/cache.gettyimages.com/4d3784cb26c949e6a4849d07660e0a45.jpg">
+          </div>
             <h2>Profile</h2>
             <p>
               Learning to code, one <em>tag</em> at a time.
@@ -63,6 +69,7 @@
                 <li>Knitting</li>
                 <li>Magento</li>
                 <li>Assembling IKEA furniture</li>
+                <li>Making nachos</li>
               </ol>
         </section>
         <footer class="container">
