--- a/app/index.html
+++ b/app/index.html
@@ -28,12 +28,14 @@
       </section>
       <section>
         <form>
+          <div class="select">
           <select>
               <option>Please select</option>
               <option value "Natural Police">Natural Police</option>
               <option value "Rob some drug dealers">Rob drug dealers</option>
               <option value "SHeeeeeeeeit">SHeeeeeeeeit</option>
           </select>
+        </div>
           <button>Find candidate</button>
         </form>
       </section>
