--- a/index.html
+++ b/index.html
@@ -4,20 +4,56 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
     <title>Liz Falconer, Portfolio</title>
   </head>
   <body>
-      <header>
-        <div>
-        <img src="Liz Logo.png" alt="Liz Falconer Logo" />
-      </div>
-      <nav>
-          <ul>
-              <li><a href="/CV">CV</a></li>
-              <li><a href="http://www.eatdirtyburger.com/whitechapel">Burgers</a>
-              <li><a href="https://www.instagram.com/rizuchanmungbean/">Instagram</a>
-          </ul>
-      </nav>
+      <header class="container">
+        <div class="row">
+            <div class="col logo">
+        <img src="assets/images/liz-logo-2.png" alt="Liz Falconer Logo"/>
+            </div>
+      <nav class="col">
+          <ul class"list-inline">
+              <li class="list-inline-item"><a href="/CV">CV</a></li>
+              <li class="list-inline-item"><a href="http://www.eatdirtyburger.com/whitechapel" target="_blank">Burgers</a></li>
+              <li class="list-inline-item"><a href="https://www.instagram.com/rizuchanmungbean/" target="_blank">Instagram</a></li>
+         </ul>
+     </nav>
+
+        </div>
       </header>
+      <main class="container">
+        <div class="row">
+          <div class="col top-p">
+            <h3>Ahoy there</h3>
+            <p class=right-p>Lorem ipsum dolor sit amet, te sit ponderum menandri. Graeco incorrupte no mea, eum aeque persecuti dissentiunt et. Epicuri antiopam eum in, et volumus complectitur vel. Causae feugiat indoctum ea vix, his ei idque legendos oportere, te ius oporteat sapientem. Offendit phaedrum id duo, id possim appetere mel, in erant aliquip cum.</p>
+          </div>
+          <div class="row">
+            <div class="col second-p">
+              <h3>Shiver me timbers!</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Magna sit amet purus gravida quis. Sed elementum tempus egestas sed. Risus feugiat in ante metus dictum at tempor commodo ullamcorper. Ornare arcu dui vivamus arcu felis bibendum.</p>
+            </div>
+          </div>
+      </div>
+      </main>
+        <div id="ship">
+          <img src="assets/images/ship1.png" />
+      </div>
+      <div id="big-waves">
+        <img src="assets/images/waves2.png" />
+      </div>
+      <div id="big-ship">
+        <img src="assets/images/ship2.png" />
+      </div>
+      <div id="whale">
+        <img src="assets/images/whale.png" />
+      </div>
+      <div id="big-wave">
+        <img src="assets/images/waves.png" />
+      </div>
   </body>
 </html>
