More work on app, added results

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
+     <style>
+     @import url('https://fonts.googleapis.com/css?family=Poor+Story');
+     </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Example CSS link -->
@@ -16,14 +19,15 @@
   <body>
     <header>
         <h1>
-          <i class="fa fa-street-view" aria-hidden="true"></i>
-          Recruit a Minion</h1>
+          <i class="fa fa-mobile" aria-hidden="true"></i>
+          Wiretapped</h1>
     </header>
     <main>
-      <section>
-        <p>
-          Find a minion to do your bidding.
-        </p>
+      <div id="results-list" style="display:none">
+      <section id="intro">
+        <h4>
+          All the pieces matter
+        </h4>
         <p>Select a category from the dropdown below.</p>
       </section>
       <section>
@@ -32,12 +36,66 @@
           <select>
               <option>Please select</option>
               <option value "Natural Police">Natural Police</option>
-              <option value "Rob some drug dealers">Rob drug dealers</option>
-              <option value "SHeeeeeeeeit">SHeeeeeeeeit</option>
+              <option value "Come at the king">Come at the king</option>
+              <option value "Sheeeeeeeeeeeeeeeeeeit">Sheeeeeeeeeeeeeeeeeeit</option>
           </select>
         </div>
-          <button>Find candidate</button>
+          <button>Get the re-up</button>
         </form>
+      </section>
+
+      <h2 id="results">Showing results for <span id="result-type">Natural Police</span></h2>
+      <div id="filtered-data">
+        <div class="item">
+          <div class="image">
+            <img src="assets/images/Lester2.jpg" alt="Lester Freamon" />
+          </div>
+          <div class="info">
+            <h3>Lester Freamon</h3>
+            <p>You follow the drugs, and you're going to get drug addicts and drug dealers. But you start to follow the money... and you don't know where the fuck it's going to take you.</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="image">
+            <img src="assets/images/bunk.jpg" alt="Bunk Moreland" />
+          </div>
+          <div class="info">
+            <h3>Bunk Moreland</h3>
+            <p>I'm a murder police. I work murders. I don't fuck with no make-believe. I don't jerk shit around. I catch a murder, and I work it.</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="image">
+            <img src="assets/images/kima.jpg" alt="Kima Greggs" />
+          </div>
+          <div class="info">
+            <h3>Shakima Greggs</h3>
+            <p>Fighting the war on drugs... one brutality case at a time.</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="image">
+            <img src="assets/images/mcnutty.jpg" alt="Jimmy McNulty" />
+          </div>
+          <div class="info">
+            <h3>Jimmy McNulty</h3>
+            <p>What the fuck did I do?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="full-item-view">
+    <button id="back-to-start" type="button">Go back</button>
+      <div class="image">
+        <img src="assets/images/Lester2.jpg" alt="Lester Freamon" />
+      </div>
+      <div class="info">
+        <h3>Lester Freamon</h3>
+        <p>You follow the drugs, and you're going to get drug addicts and drug dealers. But you start to follow the money... and you don't know where the fuck it's going to take you.</p>
+      </div>
+    </div>
+  </div>
+      <section>
       </section>
     </main>
   </body>
