--- a/index.html
+++ b/index.html
@@ -55,5 +55,37 @@
       <div id="big-wave">
         <img src="assets/images/waves.png" />
       </div>
+      <div id="big-old-ship">
+        <img src="assets/images/ship3.png" />
+      </div>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <p>Once upon a time there was an old pirate named Pirate Davey. He was a bad old pirate and made many young brides into widows.
+              </p>
+            </div>
+            <div class="col">
+              <p>Davey was out on his ship the Soiled Nappy one day, pirating and being a bastard. He met a whale called Old Stinker. "Ahoy Pirate Davey", said Old Stinker, "I'm going to bite yer nuts off you old pissbag".
+              </p>
+            </div>
+          <div class="col">
+            <p>"My arse you will Old Stinker", replied Pirate Davey, "I'll use your eyeballs as shark bait!"
+            </p>
+          </div>
+          <div class="col">
+            <p>Just then Old Stinker rose up out of the water and bit Old Davey's head right off his shoulders. But Old Davey didn't fall down and die. He just kept walking around, spewing blood out his neck-hole.
+            </p>
+          </div>
+      <div class="col">
+        <p>To this day, Pirate Davey walks around the deck of the Soiled Nappy angrily looking for Old Stinker so he can turn his eyeballs into shark bait.
+        </p>
+      </div>
+      <div class="col">
+        <p>Meanwhile even the hardendest of Pirate bastards turn pale at the mention of Old Stinker.
+        </p>
+      </div>
+  </div>
+      </section>
   </body>
 </html>
