Sea ghost stories

--- a/index.html
+++ b/index.html
@@ -26,11 +26,81 @@
         </div>
       </header>
       <main class="container">
+          <h3>The Maiden and the Skull Kraken</h3>
         <div class="row">
-          <div class="col top-p">
-            <h3>Ahoy there</h3>
-            <p class=right-p>Lorem ipsum dolor sit amet, te sit ponderum menandri. Graeco incorrupte no mea, eum aeque persecuti dissentiunt et. Epicuri antiopam eum in, et volumus complectitur vel. Causae feugiat indoctum ea vix, his ei idque legendos oportere, te ius oporteat sapientem. Offendit phaedrum id duo, id possim appetere mel, in erant aliquip cum.</p>
+          <div class="col">
+            <p>Long, long ago, there was a beautiful girl named Miranda.
+              She liked picking flowers and riding her horse and doing normal girl stuff but there was something not right about her.
+            </p>
+            <p>During the night, she would dream of a very cold dark place, deep deep down in the sea.
+              Sometimes she would awake to the feeling of cold tentacles gripping her tightly.
+            </p>
           </div>
+          <div class="col">
+            <p>She didn't know it properly, but the Skull Kraken wanted her to be his bride and was putting dreams of the deep sea into her head.
+            </p>
+            <p>Miranda's parents knew she was pretty weird and worried about not being able to find a husband for her.
+              Back then, getting a husband was really, really important because women weren't really supposed to have jobs.
+            </p>
+          </div>
+          <div class="col">
+            <p>Eventually, much to their relief, Miranda's father met a young farmer with a decent amount of money who wanted very much to marry Miranda.
+              He seemed pretty normal and wasn't bad looking, so Miranda's father agreed. Miranda didn't object either, but when he came around for tea she would get a faraway look in her eyes.
+              She was thinking about the sea.
+            </p>
+
+          </div>
+          </div>
+        <div class="row">
+        <div class="col">
+          <p>This used to worry Miranda's parents. They were afraid the farmer, whose name was George, would figure out how strange she was before the wedding.
+          </p>
+          <p>They were very glad when eventually the wedding day came and George and Miranda were wed without any trouble.
+          </p>
+            <p>George carried Miranda up to the bed-chamber, and Miranda knew what was supposed to happen next because her mother had awkwardly explained it that morning.
+          </p>
+        </div>
+        <div class="col">
+          <p>Miranda lay back on the goosefeather bed and closed her eyes, and when she did, she could see a giant skull face with tentacles all around it.
+            It was the Skull Kraken, here to claim her!
+          </p>
+          <p>Miranda was frightened - but at the same happy to be finally going to the deep sea.
+          </p>
+          <p>When she opened her eyes, Miranda was in a deep cavern under the sea. It was the lair of the Skull Kraken.
+            Miranda could breathe fine under water because she was now a mermaid.
+          </p>
+        </div>
+        <div class="col">
+          <p>"Miranda", said the Skull Kraken. "I have brought you here to be my bride. That is, if you want. I mean I'm not a monster, I won't force you."
+          </p>
+          <p>Miranda thought about it for a while. "I think I'd like to stay here in the ocean", she said at last.
+          "I never felt quite at home up on land, people used to give me the strangest looks when I said anything. But, with all due respect, I'm not sure if I fancy you, even though your skull face and tentacles are pretty cool.
+          Would it be OK if we spent some time getting to know each other first?"
+        </p>
+        </div>
+      </div>
+  <div class="row">
+    <div class="col">
+      <p>The Skull Kraken was a little bit crestfallen, but there was some encouragement to be found in her words. "That would be fine", he said "take all the time you need."
+      </p>
+      <p>Miranda and the Skull Kraken never ended up being more than just friends.
+        The Skull Kraken eventually had to admit the attraction to Miranda had been mainly physical, and once he got to know her realised they didn't have enough in common to sustain a long-term relationship.
+      </p>
+    </div>
+    <div class="col">
+        <p>They never discussed it, but Miranda felt the same way, and after some time they both met other creatures and lived out their days quite happily under the sea.
+      </p>
+        <p>However, they stayed friends for the rest of their lives, sharing underwater gardening tips and feeding each other's pet fish when the other went on holiday.
+        </p>
+    </div>
+    <div class="col">
+      <p>As for George, he sold his farm to buy a big ship, and spent the rest of his days searching the seas for his lost bride.
+      </p>
+        <p>They say that even now, many years since he has died, his ghost searches for her still, and sometimes during the full moon you can see his ghost ship gliding silently by.
+      </p>
+    </div>
+    </div>
+</div>
           <div class="row">
             <div class="col second-p">
               <h3>Shiver me timbers!</h3>
@@ -40,8 +110,8 @@
           </div>
       </div>
       </main>
-        <div id="ship">
-          <img src="assets/images/ship1.png" />
+      <div id="ship">
+          <img src="assets/images/newship.png" />
       </div>
       <div id="big-waves">
         <img src="assets/images/waves2.png" />
@@ -58,31 +128,60 @@
       <div id="big-old-ship">
         <img src="assets/images/ship3.png" />
       </div>
+      <div id="mermaid">
+        <img src="assets/images/mermaid1.png" />
+      <div id="big-wave-2">
+          <img src="assets/images/waves.png" />
+      </div>
+      <div id="kraken-1">
+        <img src="assets/images/kraken1.png" />
+      </div>
+      <div id="new-ship-2">
+        <img src="assets/images/newship2.png" />
+      </div>
+      <div id="skullkraken">
+        <img src="assets/images/skullkraken.png" />
+      </div>
+      <div id="tentacle">
+        <img src="assets/images/tentacle.png" />
+      </div>
       <section>
         <div class="container">
+                  <h3>The legend of Pirate Davey and Old Stinker</h3>
           <div class="row">
             <div class="col">
-              <p>Once upon a time there was an old pirate named Pirate Davey. He was a bad old pirate and made many young brides into widows.
+              <p>Once upon a time there was an old pirate named Pirate Davey. He was a bad old pirate and had made many young brides into widows for the sake of a few shiny bits of metal or a bottle of rum.
+              </p>
+              <p>It was said that one whiff of his stinky breath, which smelled like a mixture of fish-guts and last night's liquor, could make a man lose his wits and jump overboard. That is if Pirate Davey hadn't already devised him a more violent end.
+              </p>
+              <p>Pirate Davey's ship was called the Soiled Nappy, on account of what men did when they saw its sails heading in their direction.
               </p>
             </div>
             <div class="col">
-              <p>Davey was out on his ship the Soiled Nappy one day, pirating and being a bastard. He met a whale called Old Stinker. "Ahoy Pirate Davey", said Old Stinker, "I'm going to bite yer nuts off you old pissbag".
+              <p>One morning as Pirate Davey was out strolling on the deck of the Soiled Nappy, pirating and being a bastard, he met a whale called Old Stinker.
+              </p>
+              <p>"Ahoy Pirate Davey", said Old Stinker, "You think you're such a bad old pirate, strutting around, but you look like breakfast to me, and not a very filling one at that."
+              </p>
+              <p>"Curse your barnacle-covered arse, Old Stinker", replied Pirate Davey, "I'll use your eyeballs as shark bait, you dirty old mullet! Come up here on deck and let's see how brave you are!"
               </p>
             </div>
           <div class="col">
-            <p>"My arse you will Old Stinker", replied Pirate Davey, "I'll use your eyeballs as shark bait!"
+            <p>Without hesitation Old Stinker rose up out of the water and bit Davey's head right off his shoulders.
             </p>
-          </div>
-          <div class="col">
-            <p>Just then Old Stinker rose up out of the water and bit Old Davey's head right off his shoulders. But Old Davey didn't fall down and die. He just kept walking around, spewing blood out his neck-hole.
+
+              <p>Bad pirates are hard to kill, so Old Davey didn't just fall down and die. He kept walking around the deck, spewing blood out his neck-hole.
+            </p>
+            <p>Pirate Davey's hands gestured wildly, as if there were many vile curses he'd like to sling at Old Stinker, but alas he no longer had a head or mouth with which to do so.
+            </p>
+            <p>Old Stinker laughed and laughed.
             </p>
           </div>
       <div class="col">
         <p>To this day, Pirate Davey walks around the deck of the Soiled Nappy angrily looking for Old Stinker so he can turn his eyeballs into shark bait.
         </p>
-      </div>
-      <div class="col">
-        <p>Meanwhile even the hardendest of Pirate bastards turn pale at the mention of Old Stinker.
+        <p>Brave sailors continue to soil their nappies at the sight of the Soiled Nappy's sails in the distance, perhaps even more than they did before.
+        </p>
+        <p>Meanwhile even the hardendest of Pirate bastards turn pale at the mention of Old Stinker. It is rumoured he lurks the depths even today, chuckling to himself at the memory of Pirate Davey's bloody neckhole and furious gesticulations.</p>
         </p>
       </div>
   </div>
